--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -15,10 +15,10 @@
         android:padding="30dp">
 
         <ImageView
-            android:layout_width="200dp"
+            android:layout_width="300dp"
             android:layout_height="200dp"
             android:layout_centerInParent="true"
-            android:background="@drawable/tlogo" />
+            android:background="@drawable/tdlogo" />
     </RelativeLayout>
 
 
