--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -14,7 +14,7 @@
 
 
     <item
-        android:id="@+id/nav_inventory"
+        android:id="@+id/nav_travel_history"
         android:icon="@drawable/ic_add_circle_black_24dp"
         android:title="@null" />
 
