--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -46,9 +46,10 @@
             android:id="@+id/userAddPhoto"
             android:layout_width="130dp"
             android:layout_height="130dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
             android:padding="10dp"
-            android:src="@drawable/ic_waddphoto" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_person" />
 
         <TextView
             android:id="@+id/userAddFirstName"
@@ -122,33 +123,31 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_below="@+id/rel2"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/rel2"
+        android:layout_above="@+id/bottom_nav"
+        android:padding="5dp">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/bottom_nav"
-            android:padding="5dp">
+    </android.support.v7.widget.RecyclerView>
 
-        </android.support.v7.widget.RecyclerView>
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/rel1"
+        android:layout_above="@+id/bottom_nav"/>
 
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="#404041"
+        app:menu="@menu/bottom_navigation">
 
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/bottom_nav"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:background="#404041"
-            app:menu="@menu/bottom_navigation">
-
-        </android.support.design.widget.BottomNavigationView>
-
-    </RelativeLayout>
-
-
+    </android.support.design.widget.BottomNavigationView>
 
 </RelativeLayout>
