--- a/app/src/main/res/layout/view_trip_abstract.xml
+++ b/app/src/main/res/layout/view_trip_abstract.xml
@@ -22,27 +22,35 @@
         <TextView
             android:id="@+id/trip_title"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:padding="2dp"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
             android:textSize="16sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/trip_city"
             android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:padding="2dp"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
             android:textSize="16sp"
             android:layout_below="@id/trip_title" />
 
         <TextView
             android:id="@+id/trip_state"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:padding="2dp"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
             android:textSize="16sp"
             android:layout_below="@id/trip_title"
             android:layout_toEndOf="@id/trip_city" />
+
+        <TextView
+            android:id="@+id/trip_date"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:padding="5dp"
+            android:textSize="16sp"
+            android:layout_below="@id/trip_city" />
 
     </RelativeLayout>
 
