--- a/app/src/main/res/layout/fragment_add_trip.xml
+++ b/app/src/main/res/layout/fragment_add_trip.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/colorPrimaryDark"
     android:paddingTop="5dp"
     tools:context=".activities.TravelHistoryActivity">
 
@@ -19,18 +19,19 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
             android:text="@string/add_a_trip"
             android:textAlignment="center"
-            android:textColor="@color/grey"
+            android:textColor="@color/colorPrimaryLight"
             android:textSize="25sp" />
 
-        <ImageView
-            android:id="@+id/line"
-            android:layout_width="wrap_content"
-            android:layout_height="7dp"
-            android:layout_below="@+id/travel_history_title"
-            android:layout_margin="15dp"
-            android:background="@drawable/wline" />
+        <!--<ImageView-->
+            <!--android:id="@+id/line"-->
+            <!--android:layout_width="240dp"-->
+            <!--android:layout_height="5dp"-->
+            <!--android:layout_below="@+id/travel_history_title"-->
+            <!--android:layout_margin="15dp"-->
+            <!--android:background="@drawable/lineblue" />-->
 
     </RelativeLayout>
 
@@ -45,23 +46,26 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/post_image"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:adjustViewBounds="true"
+                android:layout_gravity="center"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_waddphoto" />
+                android:src="@drawable/ic_add_a_photo_blue_24dp" />
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:id="@+id/input_title"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="30dp"
                 android:maxLines="2"
-                android:background="@null"
+                android:textColor="@color/colorPrimary"
+                android:background="@drawable/edittextline"
+                android:textColorHint="@color/colorPrimary"
                 android:hint="@string/hint_title"
                 android:gravity="start"
                 android:padding="10dp" />
@@ -74,24 +78,29 @@
 
                 <EditText
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:layout_weight="1"
                     android:id="@+id/input_city"
                     android:layout_marginStart="10dp"
-                    android:background="@null"
+                    android:background="@drawable/edittextline"
+                    android:textColorHint="@color/colorPrimary"
+                    android:textColor="@color/colorPrimary"
                     android:maxLines="2"
                     android:hint="@string/hint_city_town"
                     android:padding="10dp" />
 
                 <Spinner
+                    android:id="@+id/input_state"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:id="@+id/input_state"
                     android:layout_marginStart="10dp"
-                    android:background="@null"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="1"
+                    android:background="@color/colorPrimary"
                     android:entries="@array/state"
-                    android:padding="10dp" />
+                    android:padding="10dp"
+                    android:popupBackground="#ffffff"
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
@@ -99,31 +108,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:id="@+id/dates"
-                android:layout_marginTop="30dp">
+                android:layout_marginTop="10dp">
 
                 <EditText
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:layout_weight="1"
                     android:id="@+id/input_date"
                     android:layout_marginStart="10dp"
                     android:clickable="true"
+                    android:textColorHint="@color/colorPrimary"
+                    android:textColor="@color/colorPrimary"
                     android:focusable="false"
                     android:inputType="date"
-                    android:background="@null"
+                    android:background="@drawable/edittextline"
                     android:maxLines="2"
                     android:hint="@string/hint_date"
                     android:padding="10dp" />
 
                 <EditText
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:layout_weight="1"
                     android:id="@+id/input_number_of_days"
                     android:layout_marginStart="10dp"
                     android:inputType="number"
-                    android:background="@null"
+                    android:background="@drawable/edittextline"
+                    android:textColorHint="@color/colorPrimary"
                     android:maxLines="2"
+                    android:textColor="@color/colorPrimary"
                     android:hint="@string/hint_number_of_days"
                     android:padding="10dp" />
 
@@ -131,12 +144,14 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="50dp"
                 android:id="@+id/input_description"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="30dp"
                 android:maxLines="20"
-                android:background="@null"
+                android:textColorHint="@color/colorPrimary"
+                android:textColor="@color/colorPrimary"
+                android:background="@drawable/edittextline"
                 android:hint="@string/hint_description"
                 android:gravity="start"
                 android:padding="10dp" />
@@ -145,7 +160,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/info"
-                android:background="@color/white"
+                android:background="@color/colorPrimaryDark"
                 android:layout_marginTop="10dp"
                 android:gravity="center">
 
@@ -158,7 +173,7 @@
                     android:text="@string/post_button"
                     android:layout_marginEnd="100dp"
                     android:layout_marginStart="100dp"
-                    android:background="@color/grey" />
+                    android:background="@color/colorPrimaryLight" />
 
 <!--                <Button-->
 <!--                    android:id="@+id/btn_save"-->
