--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,8 +37,9 @@
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        app:itemIconTint="@drawable/selector"
         android:layout_alignParentBottom="true"
-        android:background="#404041"
+        android:background="#2d2d2d"
         app:menu="@menu/bottom_navigation" />
 
 </RelativeLayout>
