--- a/app/src/main/res/layout/activity_travel_history.xml
+++ b/app/src/main/res/layout/activity_travel_history.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/colorPrimaryDark"
     android:paddingTop="5dp"
     tools:context=".activities.TravelHistoryActivity">
 
@@ -19,18 +19,19 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
             android:text="@string/travel_feed"
             android:textAlignment="center"
-            android:textColor="@color/grey"
+            android:textColor="@color/colorPrimaryLight"
             android:textSize="25sp" />
 
-        <ImageView
-            android:id="@+id/line"
-            android:layout_width="wrap_content"
-            android:layout_height="7dp"
-            android:layout_below="@+id/travel_history_title"
-            android:layout_margin="15dp"
-            android:background="@drawable/wline" />
+        <!--<ImageView-->
+            <!--android:id="@+id/line"-->
+            <!--android:layout_width="240dp"-->
+            <!--android:layout_height="5dp"-->
+            <!--android:layout_below="@+id/travel_history_title"-->
+            <!--android:layout_margin="15dp"-->
+            <!--android:background="@drawable/lineblue" />-->
 
     </RelativeLayout>
 
@@ -59,8 +60,8 @@
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        app:itemIconTint="@drawable/selector"
         android:layout_alignParentBottom="true"
-        android:background="#404041"
         app:menu="@menu/bottom_navigation">
 
     </android.support.design.widget.BottomNavigationView>
