--- a/app/src/main/res/layout/fragment_trip_details.xml
+++ b/app/src/main/res/layout/fragment_trip_details.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/colorPrimaryDark">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -17,9 +17,10 @@
                 android:id="@+id/trip_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
                 android:layout_marginStart="15dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="15dp"
+                android:adjustViewBounds="true"
                 android:scaleType="fitCenter" />
 
             <TextView
@@ -28,56 +29,62 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="30dp"
-                android:maxLines="2"
                 android:background="@null"
                 android:gravity="start"
                 android:hint="@string/hint_title"
-                android:padding="10dp" />
+                android:maxLines="2"
+                android:padding="10dp"
+                android:textSize="18sp"
+                android:textColor="@color/colorPrimaryLight" />
 
             <LinearLayout
+                android:id="@+id/location"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:id="@+id/location"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/trip_city"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginStart="10dp"
+                    android:layout_weight="1"
                     android:background="@null"
                     android:maxLines="2"
-                    android:padding="10dp" />
+                    android:padding="10dp"
+                    android:textColor="@color/colorPrimary" />
 
                 <TextView
                     android:id="@+id/trip_state"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginStart="10dp"
+                    android:layout_weight="1"
+
                     android:background="@null"
-                    android:padding="10dp" />
+                    android:padding="10dp"
+                    android:textColor="@color/colorPrimary" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
                 android:id="@+id/dates"
-                android:layout_marginTop="30dp">
+                android:layout_width="match_parent"
+                android:layout_height="60dp">
 
                 <TextView
                     android:id="@+id/trip_date"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginStart="10dp"
+                    android:layout_weight="1"
                     android:background="@null"
-                    android:maxLines="2"
+
                     android:hint="@string/hint_date"
-                    android:padding="10dp" />
+                    android:maxLines="2"
+                    android:padding="10dp"
+                    android:textColor="@color/colorPrimary" />
 
                 <RelativeLayout
                     android:layout_width="0dp"
@@ -88,35 +95,40 @@
                         android:id="@+id/trip_number_of_days"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+
                         android:layout_marginStart="10dp"
                         android:background="@null"
                         android:maxLines="1"
-                        android:padding="10dp" />
+                        android:padding="10dp"
+                        android:textColor="@color/colorPrimary" />
 
                     <TextView
                         android:id="@+id/text_days"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/trip_number_of_days"
                         android:layout_marginStart="10dp"
+                        android:layout_toEndOf="@id/trip_number_of_days"
                         android:background="@null"
+                        android:padding="10dp"
+
                         android:text="@string/text_days"
-                        android:padding="10dp" />
+                        android:textColor="@color/colorPrimary" />
 
                 </RelativeLayout>
 
             </LinearLayout>
 
             <TextView
+                android:id="@+id/trip_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/trip_description"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
                 android:background="@null"
-                android:hint="@string/hint_description"
+
                 android:gravity="start"
-                android:padding="10dp" />
+                android:hint="@string/hint_description"
+                android:padding="10dp"
+                android:textColor="@color/colorPrimary" />
 
         </LinearLayout>
 
