--- a/app/src/main/res/layout/travel_feed_item.xml
+++ b/app/src/main/res/layout/travel_feed_item.xml
@@ -14,6 +14,8 @@
         <ImageView
             android:id="@+id/tripImage"
             android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_alignParentLeft="true"
             android:layout_height="300dp" />
 
         <TextView
@@ -26,13 +28,13 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="15dp"
             android:paddingLeft="10dp"
-            android:textColor="@color/grey"
+            android:textColor="@color/colorPrimary"
             android:textSize="20sp" />
 
 
         <TextView
             android:id="@+id/cityTv"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/titleTv"
             android:layout_marginTop="15dp"
@@ -40,7 +42,7 @@
 
             android:layout_marginBottom="15dp"
             android:paddingLeft="10dp"
-            android:textColor="@color/grey"
+            android:textColor="@color/colorPrimary"
             android:textSize="13sp" />
 
 
@@ -50,12 +52,13 @@
             android:id="@+id/dateTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cityTv"
+            android:layout_toRightOf="@id/cityTv"
+            android:layout_below="@+id/cityTv"
             android:layout_marginTop="15dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="15dp"
             android:paddingLeft="10dp"
-            android:textColor="@color/grey"
+            android:textColor="@color/colorPrimary"
             android:textSize="13sp" />
 
 
@@ -63,12 +66,12 @@
             android:id="@+id/daysTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/dateTv"
+            android:layout_below="@id/cityTv"
             android:layout_marginTop="15dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="15dp"
             android:paddingLeft="10dp"
-            android:textColor="@color/grey"
+            android:textColor="@color/colorPrimary"
             android:textSize="13sp" />
 
 
@@ -81,7 +84,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginBottom="15dp"
             android:paddingLeft="10dp"
-            android:textColor="@color/grey"
+            android:textColor="@color/colorPrimary"
             android:textSize="13sp" />
 
 
@@ -91,7 +94,8 @@
             android:layout_height="2dp"
             android:layout_below="@+id/disTv"
             android:layout_margin="15dp"
-            android:background="@drawable/wline" />
+            android:padding="15dp"
+            android:background="@drawable/smalllineblue" />
 
     </RelativeLayout>
 
