--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="colorPrimary">#ffffff</color>
     <color name="lightgrey">#4A4A4A</color>
-    <color name="colorPrimaryDark">#4A4A4A</color>
+    <color name="colorPrimaryDark">#2D2D2D</color>
+    <color name="colorPrimaryLight">#00F3F6</color>
     <color name="colorAccent">#646464</color>
     <color name="white">#ffffff</color>
     <color name="grey">#646464</color>
