Inactivate the last button in bottom navigator Display user name by changing the related field names

--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -24,10 +24,10 @@
         android:icon="@drawable/ic_wgroup"
         android:title="@null" />
 
-    <item
-        android:id="@+id/nav_wishlist"
-        android:icon="@drawable/ic_chat"
-        android:title="@null" />
+<!--    <item-->
+<!--        android:id="@+id/nav_wishlist"-->
+<!--        android:icon="@drawable/ic_chat"-->
+<!--        android:title="@null" />-->
 
 
 </menu>
