--- a/app/src/main/res/layout/activity_travel_history.xml
+++ b/app/src/main/res/layout/activity_travel_history.xml
@@ -41,12 +41,12 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_nav">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        </android.support.v7.widget.RecyclerView>
+        </androidx.recyclerview.widget.RecyclerView>
 
     </RelativeLayout>
 
@@ -56,7 +56,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_nav"/>
 
-    <android.support.design.widget.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -64,6 +64,6 @@
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_navigation">
 
-    </android.support.design.widget.BottomNavigationView>
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </RelativeLayout>
