--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -21,7 +21,7 @@
 
     <item
         android:id="@+id/nav_search"
-        android:icon="@drawable/ic_wgroup"
+        android:icon="@drawable/ic_search_navigation"
         android:title="@null" />
 
 <!--    <item-->
