--- a/app/src/main/res/layout/list_users.xml
+++ b/app/src/main/res/layout/list_users.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="20dp"
         android:layout_toEndOf="@+id/profile_image"
         android:text="Username"
-        android:textColor="#555555"
+        android:textColor="@color/white"
         android:textSize="16sp" />
 
     <TextView
@@ -36,7 +36,7 @@
         android:layout_marginTop="5dp"
         android:text="Status Info"
         android:layout_toEndOf="@+id/profile_image"
-        android:textColor="#999999"
+        android:textColor="@color/white"
         android:textSize="14sp" />
 
 </RelativeLayout>
